Added city in profile. App Released v2

--- a/app/src/main/res/layout/activity_guidelines.xml
+++ b/app/src/main/res/layout/activity_guidelines.xml
@@ -12,182 +12,10 @@
         android:layout_height="match_parent">
 
         <LinearLayout
+            android:id="@+id/data"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="16dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="8dp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="4dp"
-                        android:text="Work Ethics-"
-                        android:textColor="@color/cardview_dark_background"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="All Campus Ambassadors must- " />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="    1. Actively participate in the tasks and work according to the deadlines. " />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="    2. Conduct the tasks in an ethical manner. Points are ought to be deducted if any unethical practices are observed. " />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="    3. If you face any problem regarding conduction, task, app related queries etc., it is essential to contact TechEagle executives prior to proceeding further in such cases." />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="    4. Honor your commitment for CA programme and if you have any issues  regarding your availability, inform us at – info@techeagle.in" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="    5. Acknowledge that points earned are subjected to the quality of your work too. TechEagle has all the rights to alter the points at any stage. " />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="    6. As CA Programme focuses on building a strong network nationwide, you’re required to maintain a healthy competition and sense of cooperation with the fellow CAs. " />
-
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="16dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="8dp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="4dp"
-                        android:text="Task:"
-                        android:textColor="@color/cardview_dark_background"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="    a. You will be assigned Compulsory, bonus and interest based tasks via​ TCAP​ App. " />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="    b. Each Task will be of some points and stages. After completion of each stage, partial points will be credited to your wallet. Once the task is completed, total points will be added to the wallet with some bonus points for completion of the task." />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="    c. You have to complete all the tasks within the deadline to get rewarded. " />
-
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="16dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="8dp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="4dp"
-                        android:text="Point Structure and Reward System-"
-                        android:textColor="@color/cardview_dark_background"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="4dp"
-                        android:text="    The point structure will enable us to keep track of your progress and to know who’re the                 top performers for a specific time period. At the end of your tenure as a TechEagle CA, if you’ve                   scored an aggregate of 75% points, then only you’ll be eligible for the certificate and other                benefits." />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="    1. Allotment of points also depends upon the quality of work. Points may be increased for a work done well and before the deadline. They can also be decreased for poor conduction or similar practices." />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="    2. There would be Levels called Milestones after each 500 points. After crossing every Milestone, you’ll be getting specific perks and rewards such as, TechEagle t shirt, caps etc." />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="    3. The CAs with the overall best performance will be awarded with exclusive Certificates by TechEagle, allowing them to stand apart." />
-
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="16dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="8dp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="4dp"
-                        android:text="Rank in Leaderboard:"
-                        android:textColor="@color/cardview_dark_background"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="4dp"
-                        android:text="    Ranking in the leaderboard is based on the total earned points and the time taken to complete the task." />
-
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
 
         </LinearLayout>
     </ScrollView>
